--- a/.env.example
+++ b/.env.example
@@ -66,9 +66,16 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-# Common integrations (uncomment as needed)
-# STRIPE_KEY=
-# STRIPE_SECRET=
-# STRIPE_WEBHOOK_SECRET=
+# Stripe Integration
+STRIPE_KEY=pk_test_xxx
+STRIPE_SECRET=sk_test_xxx
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+
+# Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=${APP_URL}/api/auth/google/callback
+
+# Mailgun (optional)
 # MAILGUN_DOMAIN=
 # MAILGUN_SECRET=
