--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "intervention/image-laravel": "^1.5",
+        "laravel/cashier": "^16.1",
         "laravel/fortify": "^1.33",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.30",
+        "maatwebsite/excel": "^3.1",
+        "socialiteproviders/google": "^4.1",
+        "stripe/stripe-php": "^17.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
