--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,9 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
+# Media Storage: 'public' for local dev, 's3' for production (DigitalOcean Spaces)
+MEDIA_DISK=public
+
 CACHE_STORE=database
 
 REDIS_CLIENT=phpredis
@@ -60,10 +63,14 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# DigitalOcean Spaces (S3-compatible)
+# For production, set MEDIA_DISK=s3 and configure these:
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_DEFAULT_REGION=nyc3
+AWS_BUCKET=your-space-name
+AWS_ENDPOINT=https://nyc3.digitaloceanspaces.com
+AWS_URL=https://your-space-name.nyc3.cdn.digitaloceanspaces.com
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 # Stripe Integration
